cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

### Global configs
set(CMAKE_DEBUG_POSTFIX "-debug")
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

### Modules
list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_LIST_DIR}/cmake")

include(printhelp)

### Project config
set(<PROJECT_NAME>_PROJECT_NAME "<name>")
set(<PROJECT_NAME>_VERSION_MAJOR 1)
set(<PROJECT_NAME>_VERSION_MINOR 0)
set(<PROJECT_NAME>_VERSION_HOTFIX 0)
set(<PROJECT_NAME>_VERSION "${<PROJECT_NAME>_VERSION_MAJOR}.${<PROJECT_NAME>_VERSION_MINOR}.${<PROJECT_NAME>_VERSION_HOTFIX}")
set(<PROJECT_NAME>_NAME_VERSION "${<PROJECT_NAME>_PROJECT_NAME} v${<PROJECT_NAME>_VERSION}")
### Target Config
set(<PROJECT_NAME>_TARGET_NAME "${<PROJECT_NAME>_PROJECT_NAME}")

if (WIN32)
	set(CMAKE_USE_RELATIVE_PATHS ON)
endif ()

### Modules
list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_LIST_DIR}/cmake")

### Project setup
project(
		${<PROJECT_NAME>_PROJECT_NAME}
		VERSION ${<PROJECT_NAME>_VERSION}
		LANGUAGES CXX
)

### Vendor

### Target
add_subdirectory(<name>-main)